<resources>
    <string name="app_name">Outlook</string>
    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close navigation bar</string>
    <string name="mail">Mail</string>
    <string name="calendar">Calendar</string>
    <string name="contact">Contact</string>
    <string name="home">Home</string>
    <string name="meet">Meet</string>
    <string name="file">File</string>
    <string name="Email">Email</string>
    <string name="new_contact">New contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_in_mail">Search in email</string>
    <string name="compose">Compose</string>
    <string name="search_in_chat_and_spaces">Search in chat and space\n</string>
    <string name="new_space">New space</string>
    <string name="app_contact">App contact</string>
    <string name="Reply">Reply</string>
    <string name="lam_nhu">lam nhu</string>
    <string name="nhutunglam1_gmail_com">nhutunglam1@gmail.com</string>
    <string name="mail_calendar">Mail &amp; Calendar</string>
    <string name="block_external_images">Block external images</string>
    <string name="report_spam">Report spam</string>
    <string name="categories">Categories</string>
    <string name="reset_account">Reset account</string>
    <string name="remove_account">Remove account</string>
    <string name="avatar">Avatar</string>
    <string name="New_mail">New mail</string>
    <string name="Name">Name</string>
    <string name="Head_Mail">Head Mail</string>
    <string name="Content">Content</string>
    <string name="new_message">New message</string>
    <string name="to">To</string>
    <string name="show_bcc_cc">Show BCC,CC</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="More">More</string>
    <string name="Notification">Notification</string>
    <string name="Search">Search</string>
    <string name="nothing_in_archive">Nothing in Archive</string>
    <string name="nothing_in_junk">Nothing in junk</string>
    <string name="in_archive">Clean up your inbox by\nmoving messages to Archive</string>
    <string name="go_to_inbox">GO TO INBOX</string>
    <string name="nothing_in_deleted">Nothing in Deleted</string>
    <string name="look_empty">Looks empty over here</string>
    <string name="nothing_in_draft">Nothing in Drafts</string>
    <string name="start_writing">Start writing something fabulous</string>
    <string name="Nothing_in_Unwanted">Nothing in Unwanted</string>
    <string name="Inbox">Inbox</string>
    <string name="Drafts">Drafts</string>
    <string name="Archive">Archive</string>
    <string name="Junk">Junk</string>
    <string name="Sent">Sent</string>
    <string name="Deleted">Deleted</string>
    <string name="Unwanted">Unwanted</string>
    <string name="Settings">Settings</string>
    <string name="move_to_folder">Move to folder</string>
    <string name="move_to_other">Move to Other</string>
    <string name="report_junk">Report junk</string>
    <string name="ignore_conversation">Ignore conversation</string>
    <string name="forward_as_attachment">Forward as attachment</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="frag">Frag</string>
    <string name="pin">Pin</string>
    <string name="snooze">Snooze</string>
    <string name="Forward">Forward</string>
    <string name="print">Print</string>
    <string name="pinned">Pinned</string>
    <string name="more_apps">More Apps</string>
    <string name="you_have_no_contacts_yet">You have no contacts yet</string>
    <string name="No_new_notifications">No new notifications</string>
    <string name="Please_check_back_later">Please check back later</string>
    <string name="question_con">Question con</string>
    <string name="account_description">Account Description</string>
    <string name="try_resetting_the_account_if_you_have_sync_issues">Try resetting the account if you have sync issues</string>
    <string name="removing_this_account_from_the_app_will_delete_any_local_data_stored_in_the_app">Removing this account from the app will delete any local data stored in the app</string>
    <string name="back">back</string>
    <string name="tue">TUE</string>
    <string name="sun">SUN</string>
    <string name="nov_2024">Nov 2024</string>
    <string name="mon">MON</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome_to_outlook">Welcome to Outlook</string>
    <string name="outlook_login">Outlook login</string>
    <string name="new_email">New email</string>
    <string name="please_input_information">Please input information</string>
    <string name="phone_number">Phone number</string>
    <string name="please_input_phone_number">Please input phone number</string>
    <string name="please_input_email">please input email</string>
    <string name="new_username">New username</string>
    <string name="please_input_username">Please input username</string>
    <string name="new_password">New password</string>
    <string name="please_input_password">Please input password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_confirm_email">Invalid confirm email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_not_exist">username not exist</string>
    <string name="incorect_password">incorect password</string>
    <string name="invalid_password_format">Invalid password format</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="create_a_new_password_ensure_it_differs_from_previous_ones_for_security">Create a new password. Ensure it differs from previous ones for security</string>
    <string name="log_out">Log out</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="duplicate_old_password">duplicate old password</string>
    <string name="password_must_match_new_password">Password must match new password</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="email_not_exist">Email not exist</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="please_input_new_password">please input new password</string>
    <string name="reset_password">reset password</string>

    >>>>>>> testing
</resources>