<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <ImageView
        android:id="@+id/signupImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupImage">

        <!-- New Email field -->
        <EditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints="emailAddress"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/invalidEmailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_email"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <!-- Phone number field -->
        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints="phone"
            android:hint="@string/phone_number"
            android:inputType="phone" />
        <TextView
            android:id="@+id/invalidPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_phone_number"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <!-- Username field -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text" />
        <TextView
            android:id="@+id/usernameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_input_username"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <!-- Password field -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/invalidPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_password_format"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <!-- Confirm Password field -->
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/invalidConfirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwords_do_not_match"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account" />
            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/log_in"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/blue_character"
            app:cornerRadius="16dp"
            android:padding="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>