<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/outlook_login"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_to_outlook"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/username"
            android:inputType="text" />
        <TextView
            android:id="@+id/notInputUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_input_username"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/notMatchUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_not_exist"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />


        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/notInputPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_input_password"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/wrongPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorect_password"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />


        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_blue_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/don_t_have_an_account" />


            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@android:color/holo_blue_dark"
                android:onClick="goToSignUp"/>
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/blue_character"
            app:cornerRadius="16dp"
            android:padding="12dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
