<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/forgotpass">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:contentDescription="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/newPasswordDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp" />
    <TextView
        android:id="@+id/input_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_email"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />


    <TextView
        android:id="@+id/newPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/set_a_new_password"

        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/newPasswordDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_password_ensure_it_differs_from_previous_ones_for_security"
        android:textSize="14sp"
        android:textColor="#888888"
        app:layout_constraintTop_toBottomOf="@id/newPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/newPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/input_new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_new_password"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordInput" />


    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="205dp"
        app:layout_constraintTop_toBottomOf="@id/newPasswordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/input_confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duplicate_old_password"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/blue_character"
        app:cornerRadius="16dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />


</androidx.constraintlayout.widget.ConstraintLayout>
