<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_containerReceive"
    android:orientation="vertical"
    android:background="@color/background_all">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_all"
        >

        <ImageView
            android:id="@+id/imageviewReceive"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/account_circle" />

        <TextView
            android:id="@+id/nameReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/imageview"
            android:alpha="0.8"
            android:fontFamily="robotomedium"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="3dp"
            android:fontFamily="light"
            android:text="Nov 9"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/head_emailReceive"
            android:layout_below="@id/nameReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="robotolight"
            android:layout_toEndOf="@id/imageview"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="-5dp"
            android:text="@string/Head_Mail"/>

        <TextView
            android:id="@+id/contentReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="robotolight"
            android:layout_below="@+id/head_emailReceive"
            android:layout_toRightOf="@+id/imageview"
            android:layout_marginLeft="-5dp"
            android:text="@string/Content"
            android:textSize="14dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black" />

    </RelativeLayout>



</androidx.cardview.widget.CardView>